# netwatch

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
addon/: Dockerfile  README.md  config.yaml  run.sh
src/netwatch/: __init__.py  config.py  logging.py  mac.py  main.py  supervisor.py
src/netwatch/auth/: __init__.py  bootstrap.py  deps.py  oidc_routes.py  passwords.py  routes.py  sessions.py
src/netwatch/auth/oidc/: __init__.py  discovery.py  providers.py  registry.py
src/netwatch/db/: __init__.py  backup.py  config_store.py  models.py  repository.py  seed.py  session.py
src/netwatch/mqtt/: __init__.py  bus.py  discovery.py  publisher.py
src/netwatch/opnsense/: __init__.py  client.py  poller.py
src/netwatch/policy/: __init__.py  cooldown.py  engine.py  rules.py
src/netwatch/unifi/: __init__.py  alias_sync.py  client.py  events.py  listener.py
src/netwatch/web/: __init__.py  app.py
src/netwatch/web/static/: .gitkeep
src/netwatch/web/templates/: _device_detail_modal.html  _device_detail_modal_update.html  _device_row.html  _general_section.html  _settings_sso.html  base.html  history.html  index.html  login.html  mqtt.html  networks.html  policies.html  settings.html  setup.html
tests/: conftest.py  test_alert_dedup.py  test_auth.py  test_mqtt_discovery.py  test_policy.py  test_unifi_events.py
