[project]
name = "netwatch"
version = "0.1.0"
description = "WiFi device watcher: UniFi events -> SQLite + Home Assistant via MQTT, with auto-block policy and a web UI"
requires-python = ">=3.12"
license = { text = "TBD" }
authors = [{ name = "dodgerbluee" }]
readme = "README.md"

dependencies = [
    # web + templating
    "fastapi >=0.115,<0.120",
    "uvicorn[standard] >=0.30,<0.40",
    "jinja2 >=3.1,<4",
    "python-multipart >=0.0.9,<1",

    # config
    "pydantic >=2.7,<3",
    "pydantic-settings >=2.4,<3",

    # db
    "sqlalchemy[asyncio] >=2.0,<3",
    "aiosqlite >=0.20,<1",
    "alembic >=1.13,<2",

    # http / unifi
    "httpx >=0.27,<1",
    "websockets >=12,<14",
    "tenacity >=8.3,<10",  # reconnect/backoff

    # mqtt
    "aiomqtt >=2.3,<3",

    # auth
    "argon2-cffi >=23.1,<26",
    "itsdangerous >=2.2,<3",
    "authlib >=1.3,<2",

    # logging
    "structlog >=24.1,<26",
]

[project.optional-dependencies]
dev = [
    "pytest >=8,<9",
    "pytest-asyncio >=0.23,<1",
    "pytest-cov >=5,<7",
    "ruff >=0.6,<1",
    "mypy >=1.11,<2",
    "types-pyyaml",
    "respx >=0.21,<1",  # httpx mocking
]

[project.scripts]
netwatch = "netwatch.main:run"

[build-system]
requires = ["hatchling >=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netwatch"]

[tool.hatch.build.targets.wheel.shared-data]
"src/netwatch/web/templates" = "netwatch/web/templates"
"src/netwatch/web/static" = "netwatch/web/static"

# -------------------------------------------------------------------
# tooling
# -------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "C4",               # comprehensions
    "SIM",              # simplifications
    "RUF",              # ruff-specific
    "ASYNC",            # async correctness
    "S",                # bandit (security)
    "TCH",              # type-checking blocks
]
ignore = [
    "S101",  # asserts in tests are fine
    "S104",  # binding to 0.0.0.0 is intentional in containers
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiomqtt.*", "alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=netwatch --cov-report=term-missing"

[tool.coverage.run]
source = ["src/netwatch"]
branch = true
